--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -12,7 +12,7 @@
                             <li>
                                 <h1># <%= order._id %></h1>
                                     <ul>
-                                        <% order.items.forEach(product=> { %>
+                                        <% order.products.forEach(product=> { %>
                                             <li><%= product.title %> (<%=
                                                         product.quantity
                                                         %>)</li>
