add logout functionality

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -34,6 +34,11 @@
                     <a class="<%= path === '/login' ? 'active' : '' %>"
                         href="/login">Login</a>
                 </li>
+                <li class="main-header__item">
+                    <form action="/logout" method="post">
+                        <button type="submit">Logout</button>
+                    </form>
+                </li>
             </ul>
         </nav>
     </header>
