--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -30,9 +30,11 @@
                                             <div class="card__actions">
                                                 <a href="/products/<%=
                                                     product._id %>" class="btn">Details</a>
+                                                <% if(isAuthenticated) {%>
                                                 <%-
                                                     include('../includes/add-to-cart.ejs',
                                                     {product: product}) %>
+                                                <% } %>
                                                 </div>
                                             </article>
                                             <% } %>
