--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -36,6 +36,10 @@
                 <a class="<%= path === '/login' ? 'active' : '' %>"
                     href="/login">Login</a>
             </li>
+            <li class="main-header__item">
+                <a class="<%= path === '/signup' ? 'active' : '' %>"
+                    href="/signup">Signup</a>
+            </li>
             <% } else { %>
             <li class="main-header__item">
                 <form action="/logout" method="post">
@@ -56,6 +60,7 @@
             <a class="<%= path === '/products' ? 'active' : '' %>"
                 href="/products">Products</a>
         </li>
+        <% if (isAuthenticated) { %>
         <li class="mobile-nav__item">
             <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
         </li>
@@ -72,5 +77,20 @@
                 href="/admin/products">Admin Products
             </a>
         </li>
+        <% } %>
+        <% if (!isAuthenticated) { %>
+        <li class="mobile-nav__item">
+            <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+        </li>
+        <li class="mobile-nav__item">
+            <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+        </li>
+        <% } else { %>
+        <li class="mobile-nav__item">
+            <form action="/logout" method="post">
+                <button type="submit">Logout</button>
+            </form>
+        </li>
+        <% } %>
     </ul>
 </nav>
